--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=aquaroute
 spring.data.mongodb.uri=mongodb+srv://ymcanque:root@sysarch.vqvxfyb.mongodb.net/?retryWrites=true&w=majority&appName=SysArch
 spring.data.mongodb.database=SysArch
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.springframework.boot.autoconfigure.web=DEBUG
