Server Port update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=4455
+
 spring.application.name=aquaroute
 spring.data.mongodb.uri=mongodb+srv://ymcanque:root@sysarch.vqvxfyb.mongodb.net/?retryWrites=true&w=majority&appName=SysArch
 spring.data.mongodb.database=SysArch
